# varrd

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  edge_idea.yml  feature_request.yml
examples/: mcp_config.json  multi_idea_loop.py  quick_start.py  research_idea.py  scan_portfolio.py
skills/varrd-balance/: SKILL.md
skills/varrd-discover/: SKILL.md
skills/varrd-edges/: SKILL.md
skills/varrd-hypothesis/: SKILL.md
skills/varrd-research/: SKILL.md
skills/varrd-reset/: SKILL.md
skills/varrd-scan/: SKILL.md
skills/varrd-search/: SKILL.md
varrd/: __init__.py  auth.py  cli.py  client.py  display.py  instructions.py  models.py
varrd/freqtrade/: __init__.py  generator.py  translator.py  validator.py
varrd/freqtrade/templates/: strategy_template.py
varrd/jesse/: __init__.py  generator.py  translator.py  validator.py
varrd/jesse/templates/: strategy_template.py
